# Nyx

./: .editorconfig  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy-pages.yml  rust-ci.yml
apps/cli-rust/: Cargo.toml
apps/cli-rust/.samples/: bytes.enc
apps/cli-rust/src/: main.rs  test.rs
apps/cli-rust/src/console/: chat.rs
apps/cli-rust/src/crypto/: cipher.rs
apps/cli-rust/src/peer/: p2p.rs
apps/cli-rust/src/vault/: manager.rs
apps/server-node/: .env.example  package.json  tsconfig.json
apps/server-node/src/: config.ts  exceptions.ts  index.ts  registry.ts  types.d.ts  utils.ts
apps/server-node/src/database/: mongo.ts  respository.ts
apps/server-node/src/middlewares/: isAuthenticated.ts
apps/server-node/src/routes/: connection.broadcast.ts  conversation.routes.ts  media.routes.ts  messages.broadcast.ts  messages.routes.ts  signaling.broadcast.ts  typing.broadcast.ts  user.broadcast.ts  user.routes.ts
apps/server-node/src/security/: crypto.ts  eddsaAuth.ts
apps/server-node/src/services/: conversation.service.ts  messages.service.ts  users.service.ts
apps/server-node/src/shared/: event-types.ts
apps/web-client/: .env.example  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web-client/src/: main.tsx  router.tsx  types.ts  vite-env.d.ts
apps/web-client/src/components/: RequireAuth.tsx
apps/web-client/src/context/: AuthContext.tsx
certs/: .gitkeep
scripts/: generate-dev-ssl-keys.sh  generate-server-key-pairs.sh
(+55 files in other folders)
