[package]
name = "cli-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = "0.4.42"
keyring = { version = "3.6.3", features = ["windows-native", "linux-native", "apple-native"] }
p256 = { version = "0.13.2", features = ["ecdh", "jwk"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
thiserror = "2.0.17"
zeroize = { version = "1.8.2", features = ["derive"] }

dialoguer = "0.11"
colored = "2.1"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = [
    "tcp", 
    "tokio", 
    "noise", 
    "yamux", 
    "mdns", 
    "macros"
] }
ctrlc = "3.5.1"
